# click-speak

./: .gitignore  ClickSpeak.icns  LICENSE  README.md  pyproject.toml  setup.py
scripts/: build_app.sh  install_app.sh
src/: launcher.c
src/clickspeak/: __main__.py  audio.py  config.py  inject.py  main.py  transcribe.py  vad.py  wake_word.py
